--- a/sample_website.html
+++ b/sample_website.html
@@ -221,7 +221,7 @@
             width: 100%;
             height: 50px;
             background: rgb(8, 5, 71);
-            color: #fff;
+           
         }
 
         .footer p {
@@ -229,6 +229,7 @@
             text-align: center;
             height: 20px;
             line-height: 30px;
+             color: #000;
 
         }
 
