--- a/sample_website.html
+++ b/sample_website.html
@@ -389,7 +389,7 @@
         <div class="std-box">
             <img src="../img/logo1.jpg" alt="" class="section-img-left" style="width: 80px; height: auto;">
             <h3 class="section-text">Engineering, Economics and Education (Volume-1)</h3>
-            <img src="../img/journal_logo.png" class="section-img-right" alt="" style="width: 150px; height: auto; ">
+            <img src="..\img\journal_logo.png" class="section-img-right" alt="" style="width: 150px; height: auto; ">
         </div>
     </div>
     <!-- navigation -->
