--- a/sterling_myanmar.html
+++ b/sterling_myanmar.html
@@ -12,7 +12,7 @@
 <body>
     <div class="dropdown">
         <nav class="std-box">
-            <img src="img/stl_logo.png" alt="logo" class="logo">
+            <img src="image/stl_logo.png" alt="logo" class="logo">
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="">About Us&nbsp;&nbsp;<i class="fas fa-caret-down"></i></a>
@@ -75,28 +75,28 @@
 
             <div class="gallery row-1">
 
-                <img src="img/1_Services.jpg" alt="Cinque Terre" width="600" height="400">
+                <img src="image/1_Services.jpg" alt="Cinque Terre" width="600" height="400">
 
 
             </div>
 
             <div class="gallery">
 
-                <img src="img/2_Services.jpg" alt="Forest" width="600" height="400">
+                <img src="image/2_Services.jpg" alt="Forest" width="600" height="400">
 
 
             </div>
 
             <div class="gallery">
 
-                <img src="img/3_Services.jpg" alt="Northern Lights" width="600" height="400">
+                <img src="image/3_Services.jpg" alt="Northern Lights" width="600" height="400">
 
 
             </div>
 
             <div class="gallery">
 
-                <img src="img/4_Services.jpg" alt="Mountains" width="600" height="400">
+                <img src="image/4_Services.jpg" alt="Mountains" width="600" height="400">
 
 
             </div>
