--- a/sterling_myanmar_contact.html
+++ b/sterling_myanmar_contact.html
@@ -76,7 +76,7 @@ input[type=submit]:hover {
 <body>
     <div class="dropdown">
         <nav class="std-box">
-            <img src="img/stl_logo.png" alt="logo" class="logo">
+            <img src="image/stl_logo.png" alt="logo" class="logo">
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="">About Us&nbsp;&nbsp;<i class="fas fa-caret-down"></i></a>
